--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
-<button onclick="document.location='./Pages/blog.html'">Next 
-Page</button>
-    
+    <button onclick="document.location='./Pages/blog.html'">Next
+        Page</button>
+
     <div class="big-container">
         <div class="container">
             <header>
@@ -36,15 +38,12 @@ Page</button>
             <section>
                 <h2>Crypto Matters</h2>
                 <p>Please! Subscribe, Share, and like for Me</p>
-                <a href="https://www.investopedia.com/news/singer-akon-launch-cryptocurrency-akoin/" class="active">Get
-                    Started</a>
+                <a href="https://www.investopedia.com/news/singer-akon-launch-cryptocurrency-akoin/" class="active">GetStarted</a>
             </section>
-
+        
             <footer>
                 <h2>About Me</h2>
-
-                <p>
-                    Here you can check on the latest news on Crypto.
+                <p>Here you can check on the latest news on Crypto.
                     The newest events and updates on the Crypto
                     Market will be posted here. Thank you for
                     tunning in. Please Like and Subscribe to see
@@ -53,17 +52,13 @@ Page</button>
                     Sorry for any inconvenience.
                 </p>
                 <h3>Follow Me on Social Media</h3>
-                <div class="row"></div>
-                <a href="https://www.facebook.com/groups/5079872732073473/?ref=share"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-        </div>
+                <div class="row">
+                    <a href="https://www.facebook.com/groups/5079872732073473/?ref=share"><i class="fa fa-facebook"></i></a>
+                </div>
+            </footer>
 
-        <video src="Video.mp4/spaceVideoCClip.mp4" autoplay muted loop></video>
-        </footer>
-    </div>
+            <video src="Video.mp4/spaceVideoCClip.mp4" autoplay muted loop></video>
+        </div>
     </div>
 </body>
-
 </html>
